ingress-deploy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boomoseries-ingress
spec:
  defaultBackend:
   service:
      name: orchauth
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /swagger/index.html
        pathType: ImplementationSpecific
        backend:
          service:
            name: orchauth
            port:
              number: 80
